# magnifungi

./: .gitignore  Cargo.toml  README.md  old_styles.css  styles.css
.Cargo/: config.toml
magnifungi_macros/: Cargo.toml
magnifungi_macros/src/: lib.rs
magnifungi_shared_types/: Cargo.toml  enums.json
magnifungi_shared_types/src/: lib.rs  view_trait.rs
magnifungi_shared_types/src/entry_types/: entry_enum.rs  entry_image.rs  entry_list.rs  entry_note.rs  entry_tint.rs  entry_trait.rs  entry_value_unit.rs  find_types.rs  mod.rs
magnifungi_shared_types/src/entry_types/entry_enum/: entry_enum_list.rs
magnifungi_tests/: Cargo.toml
magnifungi_tests/src/: tests.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: find.rs  pages.rs
src/app/find/: chemical_attributes.rs  infos.rs  morphology.rs  notes.rs  photos.rs
src/app/find/entry_types/: entry_enum.rs  entry_image.rs  entry_list.rs  entry_note.rs  entry_tint.rs  entry_value_unit.rs  mod.rs
src/app/find/entry_types/entry_enum/: entry_enum_list.rs
tests/: tests.rs
