[package]
name = "magnifungi-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
strum = "0.27"
strum_macros = "0.27"
magnifungi_shared_types = { path = "./magnifungi_shared_types" }
magnifungi_macros = { path = "./magnifungi_macros" }


[workspace]
members = ["magnifungi_macros", "magnifungi_shared_types", "src-tauri"]
