[package]
name = "magnifungi_shared_types"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
magnifungi_macros = { path = "../magnifungi_macros" }