[package]
name = "magnifungi_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
magnifungi_shared_types = { path = "../magnifungi_shared_types" }
magnifungi_macros = { path = "../magnifungi_macros" }
